--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GOOGLEMAPSAPIKEY=AIzaSyDPlrTjD-2UknjUJ5DPMqjP28YjRdemZrI
+REACT_APP_GOOGLEMAPSAPIKEY='AIzaSyDPlrTjD-2UknjUJ5DPMqjP28YjRdemZrI'
+REACT_APP_KMZ_LINK='https://mykml.s3.eu-west-1.amazonaws.com/example-kml.kml'
